# zing_product_backend

./: .gitignore  alembic.ini  db_init.py  db_test.py  main.py  periodic_process.py  pyproject.toml  readme.md  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 1cb9a1d9bc97_add_puller_info.py  3b772a9faaf4_test_2.py  40ff2173620b_init.py  528b159b9cb3_add_smaple_plan_model.py  77a0484b84b9_add_server_stats_table.py  834dd3f54209_add_ooc_setting_table.py  a6345cba6d74_add_auto_allocation_table.py  e5ab6ba583e2_add_containment.py  e823c206aaac_add_auto_allocation_table.py
zing_product_backend/api/v1/: __init__.py  auth.py  settings.py
zing_product_backend/app_db/: __init__.py  connections.py  external_tables.py  mes_db_query.py
zing_product_backend/celery_app/: celery_config.py  celery_main.py  test_update_lot.py
zing_product_backend/core/: __init__.py  app_entry.py  celery_app.py  celery_config.py  common.py  common_type.py  exceptions.py  settings.py  users.py
zing_product_backend/core/data_structure/: product_structure.py
zing_product_backend/core/middlewares/: __init__.py  request_record.py
zing_product_backend/global_utils/: function_utils.py  mes_db_utils.py
zing_product_backend/models/: auth.py  auth_model.py  auto_allocation_model.py  containment.py  containment_model.py  general_settings.py  material_setting.py  server_stats.py  tp_auto_assign.py  tp_auto_sample.py  users.py
zing_product_backend/reporting/: system_log.py
zing_product_backend/tests/: test_containment.py  test_example.py  test_parse_json.py
(+77 files in other folders)
